--- a/index.html
+++ b/index.html
@@ -98,39 +98,40 @@
                 <span><br></span>
                 <span><br></span>
 
-                Nos especializamos en el buen trato y atención de su mascota, es por esto que hemos
+                <p class="one"> Nos especializamos en el buen trato y atención de su mascota, es por esto que hemos
                 implementado un sistema de reserva de hora. Con el propósito de dar el espacio y tiempo
                 necesario
                 que requiere el servicio (VIP) que usted está pagando. <br> El enfoque siempre va ser de todas
                 maneras,
-                el no estresar tanto a la mascota como a su peluquero.
+                el no estresar tanto a la mascota como a su peluquero. </p>
 
                 <span><br></span>
                 <span><br></span>
 
 
-                Ofrecemos productos de alta gama en el mercado y nos esforzamos por tener el
+                <p>Ofrecemos productos de alta gama en el mercado y nos esforzamos por tener el
                 personal
                 adecuado para brindar dicho servicio. Contamos con el personal a disposición y certificados con
                 la
                 mención de pro-bienestar animal. Nuestro personal está preparado para dar primeros auxilios,
                 posee
-                técnicas de revisión y chequeo veterinarios en general.
+                técnicas de revisión y chequeo veterinarios en general.</p>
 
                 <span><br></span>
 
 
-                <br>Una vez que ingrese a nuestra página web usted podrá:
+                <br> <p>
+                Una vez que ingrese a nuestra página web usted podrá:</p>
 
-                <div class="justify">- Registrar un perfil y una ficha para
+                <div class="justify"> <p>- Registrar un perfil y una ficha para
                     su/s mascota/s
                     <br>- Comprar nuestros productos recomendados
-                    <br>- Revisar el itinerario mensual y horas disponibles</span>
-                    <span><br>
-                </div>
+                    <br>- Revisar el itinerario mensual y horas disponibles </span>
+                    <span><br> </p>
+                </div> <p>
                 Inmediatamente llegará a su correo - una notificación para confirmar la próxima
                 visita a
-                nuestro salón el día y a la hora que usted haya escogido.
+                nuestro salón el día y a la hora que usted haya escogido. </p>
 
                 <span><br></span>
                 <span><br></span>
@@ -203,9 +204,9 @@
                                     <span><br></span>
                                     <span><br></span>
 
-                                    Así llegó Ramses... <br> un viejito de 14 años!
+                                    <p> Así llegó Ramses... <br> un viejito de 14 años!
                                     Quien no me recibió muy contento que se diga!! jeje... nahh.. pero después...<br>Ya
-                                    verán</span>
+                                    verán</p></span>
                             </div>
 
                             <div class="carousel-item align-middle">
@@ -223,10 +224,10 @@
                                     <span><br></span>
                                     <span><br></span>
 
-                                    Aquí está como queeee... <br> bueeeno.. al menos ahí vamos 
+                                    <p>Aquí está como queeee... <br> bueeeno.. al menos ahí vamos 
                                     <br>/(¨/\¨)\
                                     <br> de a poco ...
-                                    <br>(con ganas de descansar parece)</span>
+                                    <br>(con ganas de descansar parece)</span></p> 
 
                             </div>
 
@@ -249,8 +250,8 @@
                                     <span><br></span>
                                     <span><br></span>
 
-                                    Así quedó el gruñón jaj.. <br> La dueña le dijo confianzudo .. <br> después, como
-                                    que ya <br>no se quería ír ♥</span>
+                                    <p>Así quedó el gruñón jaj.. <br> La dueña le dijo confianzudo .. <br> después, como
+                                    que ya <br>no se quería ír ♥ </p></span>
                             </div>
 
                         </div>
