--- a/vistas html/Page-404.html
+++ b/vistas html/Page-404.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DogSides - Galería</title>
+    <title> Error 404 en página - DogSides </title>
     <!-- metas para seo  -->
-    <meta name="description" content="Nos especializamos en el buen trato y atención de su mascota. Contamos con personal a disposición en mención pro bienestar animal para un servicio VIP">
-    <meta name="keywords" content="peluquería canina, perros, dogsides, fotos, destacados"
-    <!-- link a favicon -->
+    <meta name="description"
+        content="Nos especializamos en el buen trato y atención de su mascota. Contamos con personal a disposición en mención pro bienestar animal para un servicio VIP">
+    <!-- metas para la busqueda -->
+    <meta name="keywords" content="peluquería canina, perros, dogsides, fotos, destacados" <!-- link a favicon -->
+    <!-- link favicon -->
     <link rel="shortcut icon" href="../multimedia/favicon/icons8-dog-house-24.png" type="image/x-icon">
-
     <!-- link al css de boostrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-
     <!-- link a mi css -->
     <link rel="stylesheet" href="../css/styles.css">
 
@@ -77,20 +77,45 @@
 
     <!-- cierre de pestañas cabecera -->
 
+    <h1 class="text-center m-2 mt-5 pt-5 pb-lg-5"> UPPPSS... Lamentamos lo que sucedió
+        <br> <span class="parpadea text"><br>
+        <strong> Error 404 </strong> <br> Página no encontrada
+
+    </h1>
 
     <main>
-    
-    <section>
-        <h1 id="working">GALERIA</h1>
-    </section>
 
-    
+        <section class="container-fluid mt-lg-5 mt-sm-5 mb-lg-5">
 
- 
+            <div class="row">
 
+                <div class="col-sm-12 col-lg-3 ms-lg-5 container-fluid">
+                    <img src="../multimedia/galeria/extras/404.webp"
+                        alt="Sujeto sentado en un escritorio frenta a un cumputador con cara de histeria y preocupación sujetandose el cabello">
+
+                </div>
+
+
+                <div class="col-lg-7 containerD m-5">
+
+                    <div class="animdog">
+                        <div class="bodydog"></div>
+                        <div class="leg1"></div>
+                        <div class="leg2"></div>
+                        <div class="leg3"></div>
+                        <div class="leg4"></div>
+                        <div class="tail"></div>
+                        <div class="ear"></div>
+                        <div class="nose"></div>
+                        <div class="eye"></div>
+                        <div class="tongue"></div>
+                    </div>
+
+                </div>
+
+        </section>
 
     </main>
-
 
     <footer>
 
@@ -122,10 +147,10 @@
 
         </div>
 
-   </footer>
-   
-<!-- inicia script js -->
-<script src="../js/bootstrap.bundle.min.js"></script>
+    </footer>
+
+    <!-- inicia script js -->
+    <script src="../js/bootstrap.bundle.min.js"></script>
 
 </body>
 
